- Fixed swipe when thumbs are visible